Carrossel without js. :)

--- a/carrossel/index.html
+++ b/carrossel/index.html
@@ -19,13 +19,13 @@
     <input type="radio" id="next1-action" name="next-action">
     <input type="radio" id="next2-action" name="next-action">
 
-    <label class="left back2"><span>&lt;</span></label>
-    <label class="left back1"><span>&lt;</span></label>
-    <label class="left back"><span>&lt;</span></label>
+    <label for="back2-action" class="left back2"><span>&lt;</span></label>
+    <label for="back1-action" class="left back1"><span>&lt;</span></label>
+    <label for="back-action" class="left back"><span>&lt;</span></label>
 
-    <label class="right next"><span>&gt;</span></label>
-    <label class="right next1"><span>&gt;</span></label>
-    <label class="right next2"><span>&gt;</span></label>
+    <label for="next-action" class="right next"><span>&gt;</span></label>
+    <label for="next1-action" class="right next1"><span>&gt;</span></label>
+    <label for="next2-action" class="right next2"><span>&gt;</span></label>
 
     <div class="viewport">
         <div class="move-back">
