--- a/carrossel/index.html
+++ b/carrossel/index.html
@@ -46,7 +46,7 @@
                 <li>
                     <article>
                     <a href='#http://globo.com'>
-                    <img src='http://s2.glbimg.com/FXEGbBEq6u99kZIwsc53JAmH9Gf6CNAkM37M5sY-TIV-VDNV2Nfv486iqobQXtio/http://s2.glbimg.com/jEQ0ILej-PvhCLLe5M2sWwGMj-1cm6YQGPaWr7ZDTqfO4JDDht9RRnJTgA4ahlv2WkNBiU35hQ-y3OyzWAl1cA==/s.glbimg.com/jo/eg/f/original/2012/05/06/tati_minerato_ana_paula_minerato-4116_1.jpg' alt='Uma imagem legal'>
+                    <img src='http://thumbor.caricio.com/unsafe/234x320/s.glbimg.com/jo/g1/f/original/2014/09/01/jenny-donnie.jpg' alt='Uma imagem legal'>
                     <hgroup>
                     <h3>se a moda pega</h3>
                     <h2>Irmãs Minerato fazem sucesso com visual da 'calcinha invertida'</h2>
@@ -57,7 +57,7 @@
                 <li>
                     <article>
                     <a href='#http://globo.com'>
-                    <img src='http://s2.glbimg.com/42lMwOY6J2jzlb8_O5cOYeE49tQY4GFoqofKFsustUZKMCTWu5M0AOu21xm5X1Fy/http://s2.glbimg.com/vJrp7oK0vmZLELQIYtYq92xsf69VGDMLAhfCSoEhJg82ZssE7Bx3_KyO8eNOyaoUsj0rubrRnGEwrk08HZCxDA==/s.glbimg.com/jo/eg/f/original/2012/05/06/lorena_dsc0210.jpeg' alt='Uma imagem legal'>
+                    <img src='http://thumbor.caricio.com/unsafe/469x320/s.glbimg.com/jo/g1/f/original/2013/11/21/ny-special-screening-_fran.jpg' alt='Uma imagem legal'>
                     <hgroup>
                     <h3>gata do paulistão</h3>
                     <h2>Lorena Bueri mostra por que levou título e negocia para posar nua</h2>
@@ -122,7 +122,7 @@
                 <li>
                     <article>
                     <a href='#http://globo.com'>
-                    <img src='http://bit.ly/ItzdAW' alt='Uma imagem legal'>
+                    <img src='http://thumbor.caricio.com/unsafe/469x320/s.glbimg.com/jo/g1/f/original/2014/08/25/vma5.jpg' alt='Uma imagem legal'>
                     <hgroup>
                     <h3>na volta de festa de 'Avenida Brasil'</h3>
                     <h2>Nathalia Dill se nega a fazer bafômetro e tem a carteira apreendida em blitz</h2>
@@ -133,7 +133,7 @@
                 <li>
                     <article>
                     <a href='#http://globo.com'>
-                    <img src='http://bit.ly/IyUjTp' alt='Uma imagem legal'>
+                    <img src='http://thumbor.caricio.com/unsafe/234x320/s.glbimg.com/jo/g1/f/original/2013/08/24/dsc7772.jpg' alt='Uma imagem legal'>
                     <hgroup>
                     <h3>corpão em dia</h3>
                     <h2>Nakamura posa de blusa, mas depois abala de biquíni</h2>
@@ -144,7 +144,7 @@
                 <li>
                     <article>
                     <a href='#http://globo.com'>
-                    <img src='http://bit.ly/IPqiPS' alt='Uma imagem legal'>
+                    <img src='http://thumbor.caricio.com/unsafe/234x320/s.glbimg.com/jo/g1/f/original/2012/01/11/alexandre-durao-f.jpg' alt='Uma imagem legal'>
                     <hgroup>
                     <h3>novo visual</h3>
                     <h2>Babi Rossi 'volta' a ter cabelo e grava clipe com cantor</h2>
@@ -173,7 +173,7 @@
                 <li>
                     <article>
                     <a href='#http://globo.com'>
-                    <img src='http://s2.glbimg.com/FXEGbBEq6u99kZIwsc53JAmH9Gf6CNAkM37M5sY-TIV-VDNV2Nfv486iqobQXtio/http://s2.glbimg.com/jEQ0ILej-PvhCLLe5M2sWwGMj-1cm6YQGPaWr7ZDTqfO4JDDht9RRnJTgA4ahlv2WkNBiU35hQ-y3OyzWAl1cA==/s.glbimg.com/jo/eg/f/original/2012/05/06/tati_minerato_ana_paula_minerato-4116_1.jpg' alt='Uma imagem legal'>
+                    <img src='http://thumbor.caricio.com/unsafe/234x320/s.glbimg.com/jo/g1/f/original/2014/09/01/jenny-donnie.jpg' alt='Uma imagem legal'>
                     <hgroup>
                     <h3>se a moda pega</h3>
                     <h2>Irmãs Minerato fazem sucesso com visual da 'calcinha invertida'</h2>
@@ -184,7 +184,7 @@
                 <li>
                     <article>
                     <a href='#http://globo.com'>
-                    <img src='http://s2.glbimg.com/42lMwOY6J2jzlb8_O5cOYeE49tQY4GFoqofKFsustUZKMCTWu5M0AOu21xm5X1Fy/http://s2.glbimg.com/vJrp7oK0vmZLELQIYtYq92xsf69VGDMLAhfCSoEhJg82ZssE7Bx3_KyO8eNOyaoUsj0rubrRnGEwrk08HZCxDA==/s.glbimg.com/jo/eg/f/original/2012/05/06/lorena_dsc0210.jpeg' alt='Uma imagem legal'>
+                    <img src='http://thumbor.caricio.com/unsafe/469x320/s.glbimg.com/jo/g1/f/original/2013/11/21/ny-special-screening-_fran.jpg' alt='Uma imagem legal'>
                     <hgroup>
                     <h3>gata do paulistão</h3>
                     <h2>Lorena Bueri mostra por que levou título e negocia para posar nua</h2>
@@ -251,7 +251,7 @@
                 <li>
                     <article>
                     <a href='#http://globo.com'>
-                    <img src='http://bit.ly/ItzdAW' alt='Uma imagem legal'>
+                    <img src='http://thumbor.caricio.com/unsafe/469x320/s.glbimg.com/jo/g1/f/original/2014/08/25/vma5.jpg' alt='Uma imagem legal'>
                     <hgroup>
                     <h3>na volta de festa de 'Avenida Brasil'</h3>
                     <h2>Nathalia Dill se nega a fazer bafômetro e tem a carteira apreendida em blitz</h2>
@@ -262,7 +262,7 @@
                 <li>
                     <article>
                     <a href='#http://globo.com'>
-                    <img src='http://bit.ly/IyUjTp' alt='Uma imagem legal'>
+                    <img src='http://thumbor.caricio.com/unsafe/234x320/s.glbimg.com/jo/g1/f/original/2013/08/24/dsc7772.jpg' alt='Uma imagem legal'>
                     <hgroup>
                     <h3>corpão em dia</h3>
                     <h2>Nakamura posa de blusa, mas depois abala de biquíni</h2>
@@ -273,7 +273,7 @@
                 <li>
                     <article>
                     <a href='#http://globo.com'>
-                    <img src='http://bit.ly/IPqiPS' alt='Uma imagem legal'>
+                    <img src='http://thumbor.caricio.com/unsafe/234x320/s.glbimg.com/jo/g1/f/original/2012/01/11/alexandre-durao-f.jpg' alt='Uma imagem legal'>
                     <hgroup>
                     <h3>novo visual</h3>
                     <h2>Babi Rossi 'volta' a ter cabelo e grava clipe com cantor</h2>
@@ -300,7 +300,7 @@
                 <li>
                     <article>
                     <a href='#http://globo.com'>
-                    <img src='http://s2.glbimg.com/FXEGbBEq6u99kZIwsc53JAmH9Gf6CNAkM37M5sY-TIV-VDNV2Nfv486iqobQXtio/http://s2.glbimg.com/jEQ0ILej-PvhCLLe5M2sWwGMj-1cm6YQGPaWr7ZDTqfO4JDDht9RRnJTgA4ahlv2WkNBiU35hQ-y3OyzWAl1cA==/s.glbimg.com/jo/eg/f/original/2012/05/06/tati_minerato_ana_paula_minerato-4116_1.jpg' alt='Uma imagem legal'>
+                    <img src='http://thumbor.caricio.com/unsafe/234x320/s.glbimg.com/jo/g1/f/original/2014/09/01/jenny-donnie.jpg' alt='Uma imagem legal'>
                     <hgroup>
                     <h3>se a moda pega</h3>
                     <h2>Irmãs Minerato fazem sucesso com visual da 'calcinha invertida'</h2>
@@ -311,7 +311,7 @@
                 <li>
                     <article>
                     <a href='#http://globo.com'>
-                    <img src='http://s2.glbimg.com/42lMwOY6J2jzlb8_O5cOYeE49tQY4GFoqofKFsustUZKMCTWu5M0AOu21xm5X1Fy/http://s2.glbimg.com/vJrp7oK0vmZLELQIYtYq92xsf69VGDMLAhfCSoEhJg82ZssE7Bx3_KyO8eNOyaoUsj0rubrRnGEwrk08HZCxDA==/s.glbimg.com/jo/eg/f/original/2012/05/06/lorena_dsc0210.jpeg' alt='Uma imagem legal'>
+                    <img src='http://thumbor.caricio.com/unsafe/469x320/s.glbimg.com/jo/g1/f/original/2013/11/21/ny-special-screening-_fran.jpg' alt='Uma imagem legal'>
                     <hgroup>
                     <h3>gata do paulistão</h3>
                     <h2>Lorena Bueri mostra por que levou título e negocia para posar nua</h2>
@@ -329,6 +329,5 @@
 </div> <!-- .carrossel -->
 
 
-        
     </body>
 </html>
